--- a/oci_app_bookstore.py.j2
+++ b/oci_app_bookstore.py.j2
@@ -8,19 +8,27 @@ app = Flask(__name__)
 def get_config(region):
     return oci.config.from_file(profile_name=region)
 
-### Using sa-bogota-1 region
-config_sa_bogota = get_config("sa-bogota-1")
-signer = oci.auth.signers.InstancePrincipalsSecurityTokenSigner()
+config_location = get_config("{{location}}")                                       ################### PLACE HOLDER ####################
+
 
 # Initialize the SecretsClient
-secrets_client = oci.secrets.SecretsClient(config_sa_bogota)
+secrets_client = oci.secrets.SecretsClient(config_location)
+
+# Retrieve the vault secrets IDs from the local file: /home/opc/vault_secret_ocids.txt
+
+file_path = '/home/opc/vault_secret_ocids.txt'
+vault_secrets_ocid_list = []
+with open(file_path, 'r') as file:
+    vault_secrets_ocid_list = file.read().splitlines()
+
+
+vault_user = vault_secrets_ocid_list[0]
+vault_password = vault_secrets_ocid_list[1]
+vault_database = vault_secrets_ocid_list[2]
+vault_host = vault_secrets_ocid_list[3]
+
 
 # Retrieve the vault secrets contents
-
-vault_user = 'ocid1.vaultsecret.oc1.sa-bogota-1.amaaaaaav3pognaagc67tpnxo3yb7g5wplsiycihsabjmc56g7cwnk2zgy5a'
-vault_password = 'ocid1.vaultsecret.oc1.sa-bogota-1.amaaaaaav3pognaagctdfqix6ohnctyc4tuz6qegrrk5bcqnsdv5lqxvubmq'
-vault_database = 'ocid1.vaultsecret.oc1.sa-bogota-1.amaaaaaav3pognaadbqyfmh763jgl33tpbvkbodsso6vtfmpcagjtjoqdusq'
-vault_host = 'ocid1.vaultsecret.oc1.sa-bogota-1.amaaaaaav3pognaa7cw476u7eebw62gya4k6kgc4soirh46hngleak3dnsma'
 
 response = secrets_client.get_secret_bundle(vault_user)
 vault_user_value = response.data.secret_bundle_content.content
