--- a/oci_app_bookstore.py.j2
+++ b/oci_app_bookstore.py.j2
@@ -8,7 +8,7 @@ app = Flask(__name__)
 def get_config(region):
     return oci.config.from_file(profile_name=region)
 
-config_location = get_config("{{location}}")                                       ################### PLACE HOLDER ####################
+config_location = get_config({{location}})                                       ################### PLACE HOLDER ####################
 
 
 # Initialize the SecretsClient
