probando render de la dirección IP del webserver en libros.html

--- a/templates/libros.html
+++ b/templates/libros.html
@@ -9,7 +9,7 @@ Libros
     <div class="row" style="margin-top:20px; margin-left:20px">
         <div class="col-8">
            <h2>Libros disponibles en el Mundo de las Letras</h2> 
-                 
+           <p class="lead text-white mb-5">Ejecutando en el servidor web: {{ ip_address }}</p>      
            <br>
          <table class="table table-hover table-dark">
             <thead>
